--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   nc:
     image: nextcloud:apache
+    build:
+      context: .
+      dockerfile: ./Dockerfile
     restart: always
     ports:
       - 8081:443
