--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - nextcloud:/var/www/html
       - nextcloud_data:/var/www/html/data
+      - /home/till/Pictures:/opt/pictures:ro
     networks:
       - redisnet
       - dbnet
@@ -47,6 +48,7 @@ volumes:
   nextcloud:
   nextcloud_data:
   nextcloud_db:
+  pictures:
 networks:
   dbnet:
   redisnet:
