--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - 8080:80
     volumes:
       - nextcloud:/var/www/html
-      - nextcloud_data:/var/www/html/data
+      - /home/till/nextcloud_data:/var/www/html/data
       - /home/till/Pictures:/opt/pictures:ro
     networks:
       - redisnet
